--- a/src/Pages/Quiz/quiz.css
+++ b/src/Pages/Quiz/quiz.css
@@ -46,6 +46,8 @@
     top: 300px;
     transform: translate(-50%, -50%);
     font-size: 40px;
+    text-align: center;
+
 }
 
 .quiz-answers {
@@ -54,12 +56,12 @@
 
 .quiz-answer {
     width: 490px;
-    /* background: linear-gradient(0deg, #FF0000, #FF0000), #FF0000; */
     background-color: darkcyan;
     border-radius: 10px;
     color: #fff;
     font-size: 40px;
     padding: 20px 0;
+    text-align: center;
 }
 
 .quiz-answer:hover {
