--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #0F37C2;
+  background-color: #0D0D5B;
 }
 
 code {
